# openai-sdk-work

./: .env  pyproject.toml
src/openai_sdk_work/: __init__.py  async_python.py  configurations.py  handoffs.py  handoffs_2.py  simple_agent.py  tool_calling.py
